crates/carta/tests/snapshots/golden_e2e__dokuwiki__latex__indented-code.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A paragraph introduces an indented code sample.

\begin{verbatim}
this line is indented code
so is this second line
\end{verbatim}

A trailing paragraph follows the sample.
