crates/carta/tests/snapshots/golden_e2e__dokuwiki__latex__list-half-indent.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{itemize}
\tightlist
\item
  first item at indent two
\item
  a sibling at indent three sits on the same level
\end{itemize}
