crates/carta/tests/snapshots/golden_e2e__dokuwiki__latex__list-overindent.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{itemize}
\tightlist
\item
  parent item at indent two
\end{itemize}

\begin{verbatim}
    * a jump of more than one level closes the list and indents as code
\end{verbatim}
