crates/carta/tests/snapshots/golden_e2e__dokuwiki__latex__macros.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
This page suppresses its table of contents.

The cache control macro is dropped from the rendered text.
