crates/carta/tests/snapshots/golden_e2e__dokuwiki__latex__mono-smart.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Monospace with a paired \texttt{say\ “hi”\ now} double quote folds
inside the code, while an unpaired `'it's here'\,' apostrophe is read as
a quote span instead.
