crates/carta/tests/snapshots/golden_e2e__dokuwiki__latex__quote-orientation.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A possessive it`s keeps a 'quoted' phrase from nesting inside the same
kind.
