crates/carta/tests/snapshots/golden_e2e__dokuwiki__latex__quote.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{quote}
A first line of the quotation\\
continues on a second line.\\
back on the same level.
\end{quote}
